# mdidx

./: .gitignore  Cargo.toml  Makefile  README.md
skills/note-taking/mdidx-synthesis-pipeline/: SKILL.md
src/: lib.rs
src/cli/: args.rs  commands.rs  common.rs  fts.rs  indexing.rs  mod.rs  watch.rs
src/lib/: ai_config.rs  config.rs  embedding.rs  file_content.rs  indexing.rs  lancedb_util.rs  mcp.rs  paths.rs  schema.rs  search.rs  stats.rs  util.rs  vaults.rs
tests/: schema.rs
