[package]
name = "mdidx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
actix-web = "4.9"
arrow-array = "57.2"
arrow-schema = "57.2"
clap = { version = "4.5", features = ["derive"] }
fastembed = "5.13"
futures = "0.3"
chrono = "0.4"
hex = "0.4"
lancedb = "0.27.2"
lance-index = "4.0.0"
model-context-protocol = { version = "0.2.2", features = ["stdio-server"] }
notify = "6.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }
walkdir = "2.5"
